--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <h1>Panel Sensor Bus Interaktif</h1>
 
   <div class="bus-container">
-    <img src="ChatGPT Image Jun 9, 2025, 06_57_31 PM.png" alt="Bus Diagram">
+    <img src="bus.png" alt="Bus Diagram">
 
     <!-- Titik-titik sensor -->
     <div class="sensor-dot" style="top: 20%; left: 12%;" onclick="showInfo('Pintu Penumpang Depan', 'Status: Tertutup')"></div>
