--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <p>Klik pada titik sensor untuk melihat informasi</p>
 
   <div class="bus-container">
-    <img src="bus-diagram.png" alt="Diagram Bus dengan Sensor">
+    <img src="bus.png" alt="Diagram Bus dengan Sensor">
 
     <!-- Titik-titik sensor -->
     <div class="sensor-dot" style="top: 20%; left: 12%;" onclick="showInfo('Pintu Penumpang Depan', 'Status: Tertutup<br>Terakhir dibuka: 09/06/2025 14:30')"></div>
