--- a/index.html
+++ b/index.html
@@ -9,153 +9,98 @@
       font-family: Arial, sans-serif;
       background-color: #f4f7f6;
       margin: 0;
-      padding: 20px;
+      padding: 0;
       text-align: center;
-    }
-
-    h1 {
-      color: #2c3e50;
-      margin-bottom: 30px;
     }
 
     .bus-container {
       position: relative;
-      max-width: 800px;
-      margin: 0 auto;
-      background-color: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      width: 800px;
+      margin: 40px auto;
     }
 
     .bus-container img {
       width: 100%;
-      border-radius: 8px;
-      display: block;
+      border-radius: 10px;
     }
 
     .sensor-dot {
       position: absolute;
-      width: 16px;
-      height: 16px;
+      width: 14px;
+      height: 14px;
       background-color: #e74c3c;
       border-radius: 50%;
       cursor: pointer;
       border: 2px solid white;
       box-shadow: 0 0 6px rgba(0,0,0,0.3);
-      transition: all 0.2s ease;
+      transition: transform 0.2s ease;
     }
 
     .sensor-dot:hover {
-      transform: scale(1.4);
-      background-color: #c0392b;
+      transform: scale(1.3);
     }
 
     .sensor-popup {
       position: fixed;
       background: white;
-      padding: 20px;
-      box-shadow: 0 5px 25px rgba(0,0,0,0.2);
-      border-radius: 10px;
-      top: 50%;
+      padding: 15px 20px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+      border-radius: 8px;
+      top: 20%;
       left: 50%;
-      transform: translate(-50%, -50%);
+      transform: translate(-50%, -20%);
       z-index: 1000;
       display: none;
-      width: 90%;
-      max-width: 350px;
-      animation: fadeIn 0.3s;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
+      max-width: 300px;
     }
 
     .sensor-popup h4 {
-      margin: 0 0 15px;
-      font-size: 20px;
+      margin: 0 0 10px;
+      font-size: 18px;
       color: #2c3e50;
-      border-bottom: 1px solid #eee;
-      padding-bottom: 10px;
     }
 
     .sensor-popup p {
       margin: 0;
-      font-size: 16px;
-      line-height: 1.5;
-      color: #34495e;
+      font-size: 15px;
     }
 
     .sensor-popup .close {
-      position: absolute;
-      top: 10px;
-      right: 15px;
+      float: right;
       cursor: pointer;
-      font-size: 24px;
-      color: #7f8c8d;
-      transition: color 0.2s;
-    }
-
-    .sensor-popup .close:hover {
+      font-size: 20px;
       color: #e74c3c;
-    }
-
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: rgba(0,0,0,0.5);
-      z-index: 999;
-      display: none;
-    }
-
-    @media (max-width: 850px) {
-      .bus-container {
-        width: 95%;
-        padding: 10px;
-      }
-      
-      .sensor-dot {
-        width: 12px;
-        height: 12px;
-      }
     }
   </style>
 </head>
 <body>
 
   <h1>Panel Sensor Bus Interaktif</h1>
-  <p>Klik pada titik sensor untuk melihat informasi</p>
 
   <div class="bus-container">
-    <img src="bus.png" alt="Diagram Bus dengan Sensor">
+    <img src="ChatGPT Image Jun 9, 2025, 06_57_31 PM.png" alt="Bus Diagram">
 
     <!-- Titik-titik sensor -->
-    <div class="sensor-dot" style="top: 20%; left: 12%;" onclick="showInfo('Pintu Penumpang Depan', 'Status: Tertutup<br>Terakhir dibuka: 09/06/2025 14:30')"></div>
-    <div class="sensor-dot" style="top: 20%; left: 85%;" onclick="showInfo('Pintu Penumpang Belakang', 'Status: Tertutup<br>Sensor: Berfungsi normal')"></div>
-    <div class="sensor-dot" style="top: 25%; left: 9%;" onclick="showInfo('Pintu Supir', 'Status: Tertutup<br>Keamanan: Terkunci')"></div>
+    <div class="sensor-dot" style="top: 20%; left: 12%;" onclick="showInfo('Pintu Penumpang Depan', 'Status: Tertutup')"></div>
+    <div class="sensor-dot" style="top: 20%; left: 85%;" onclick="showInfo('Pintu Penumpang Belakang', 'Status: Tertutup')"></div>
+    <div class="sensor-dot" style="top: 25%; left: 9%;" onclick="showInfo('Pintu Supir', 'Status: Tertutup')"></div>
 
-    <div class="sensor-dot" style="top: 60%; left: 18%;" onclick="showInfo('Bagasi Kiri Depan', 'Status: Tertutup<br>Berat: 45 kg')"></div>
-    <div class="sensor-dot" style="top: 60%; left: 30%;" onclick="showInfo('Bagasi Kiri Tengah', 'Status: Tertutup<br>Kapasitas: 75%')"></div>
-    <div class="sensor-dot" style="top: 60%; left: 42%;" onclick="showInfo('Bagasi Kiri Belakang', 'Status: Tertutup<br>Peringatan: Tidak ada')"></div>
+    <div class="sensor-dot" style="top: 60%; left: 18%;" onclick="showInfo('Bagasi Kiri Depan', 'Status: Tertutup')"></div>
+    <div class="sensor-dot" style="top: 60%; left: 30%;" onclick="showInfo('Bagasi Kiri Tengah', 'Status: Tertutup')"></div>
+    <div class="sensor-dot" style="top: 60%; left: 42%;" onclick="showInfo('Bagasi Kiri Belakang', 'Status: Tertutup')"></div>
 
-    <div class="sensor-dot" style="top: 60%; left: 58%;" onclick="showInfo('Bagasi Kanan Depan', 'Status: Tertutup<br>Sensor: Normal')"></div>
-    <div class="sensor-dot" style="top: 60%; left: 70%;" onclick="showInfo('Bagasi Kanan Tengah', 'Status: Tertutup<br>Terakhir diakses: 09/06/2025 10:15')"></div>
-    <div class="sensor-dot" style="top: 60%; left: 82%;" onclick="showInfo('Bagasi Kanan Belakang', 'Status: Tertutup<br>Suhu: 28°C')"></div>
+    <div class="sensor-dot" style="top: 60%; left: 58%;" onclick="showInfo('Bagasi Kanan Depan', 'Status: Tertutup')"></div>
+    <div class="sensor-dot" style="top: 60%; left: 70%;" onclick="showInfo('Bagasi Kanan Tengah', 'Status: Tertutup')"></div>
+    <div class="sensor-dot" style="top: 60%; left: 82%;" onclick="showInfo('Bagasi Kanan Belakang', 'Status: Tertutup')"></div>
 
-    <div class="sensor-dot" style="top: 40%; left: 40%;" onclick="showInfo('Kursi Penumpang', 'Jumlah: 18/28 Terisi (65%)<br>Kursi prioritas: Kosong')"></div>
-    <div class="sensor-dot" style="top: 15%; left: 10%;" onclick="showInfo('Driver Fatigue', 'Status: Normal<br>Detak jantung: 72 bpm<br>Kewaspadaan: Baik')"></div>
-    <div class="sensor-dot" style="top: 5%; left: 50%;" onclick="showInfo('Cuaca Kota Berikutnya', 'Jakarta, 29°C, Cerah Berawan<br>Kelembaban: 65%<br>Perkiraan hujan: 10%')"></div>
+    <div class="sensor-dot" style="top: 40%; left: 40%;" onclick="showInfo('Kursi Penumpang', 'Jumlah: 18/28 Terisi (65%)')"></div>
+    <div class="sensor-dot" style="top: 15%; left: 10%;" onclick="showInfo('Driver Fatigue', 'Status: Normal')"></div>
+    <div class="sensor-dot" style="top: 5%; left: 50%;" onclick="showInfo('Cuaca Kota Berikutnya', 'Jakarta, 29°C, Cerah Berawan')"></div>
   </div>
 
-  <!-- Popup dan overlay -->
-  <div id="overlay" class="overlay" onclick="hideInfo()"></div>
-  
+  <!-- Popup -->
   <div id="sensorPopup" class="sensor-popup">
-    <span class="close" onclick="hideInfo()">&times;</span>
+    <span class="close" onclick="document.getElementById('sensorPopup').style.display='none'">&times;</span>
     <h4 id="sensorTitle">Sensor</h4>
     <p id="sensorInfo">Detail informasi sensor.</p>
   </div>
@@ -163,24 +108,9 @@
   <script>
     function showInfo(title, info) {
       document.getElementById('sensorTitle').innerText = title;
-      document.getElementById('sensorInfo').innerHTML = info.replace(/<br>/g, '<br>');
+      document.getElementById('sensorInfo').innerText = info;
       document.getElementById('sensorPopup').style.display = 'block';
-      document.getElementById('overlay').style.display = 'block';
-      document.body.style.overflow = 'hidden';
     }
-
-    function hideInfo() {
-      document.getElementById('sensorPopup').style.display = 'none';
-      document.getElementById('overlay').style.display = 'none';
-      document.body.style.overflow = 'auto';
-    }
-
-    // Tutup popup ketika menekan ESC
-    document.addEventListener('keydown', function(event) {
-      if (event.key === "Escape") {
-        hideInfo();
-      }
-    });
   </script>
 
 </body>
