--- a/index.html
+++ b/index.html
@@ -10,13 +10,26 @@
       background-color: #f4f7f6;
       margin: 0;
       padding: 0;
-      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    h1 {
+      margin: 20px 0;
+    }
+
+    .dashboard {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      width: 100%;
+      max-width: 1200px;
     }
 
     .bus-container {
       position: relative;
       width: 800px;
-      margin: 40px auto;
     }
 
     .bus-container img {
@@ -28,48 +41,47 @@
       position: absolute;
       width: 14px;
       height: 14px;
-      background-color: #e74c3c;
+      background-color: #3498db;
       border-radius: 50%;
       cursor: pointer;
       border: 2px solid white;
       box-shadow: 0 0 6px rgba(0,0,0,0.3);
-      transition: transform 0.2s ease;
+      transition: all 0.2s ease;
     }
 
     .sensor-dot:hover {
       transform: scale(1.3);
+      background-color: #2980b9;
     }
 
-    .sensor-popup {
-      position: fixed;
+    .sensor-dot.active {
+      background-color: #e74c3c;
+      transform: scale(1.3);
+    }
+
+    .info-panel {
+      width: 300px;
       background: white;
-      padding: 15px 20px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+      padding: 20px;
       border-radius: 8px;
-      top: 20%;
-      left: 50%;
-      transform: translate(-50%, -20%);
-      z-index: 1000;
-      display: none;
-      max-width: 300px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      align-self: center;
     }
 
-    .sensor-popup h4 {
-      margin: 0 0 10px;
-      font-size: 18px;
+    .info-panel h3 {
+      margin-top: 0;
       color: #2c3e50;
+      border-bottom: 1px solid #eee;
+      padding-bottom: 10px;
     }
 
-    .sensor-popup p {
-      margin: 0;
-      font-size: 15px;
+    .info-content {
+      min-height: 100px;
     }
 
-    .sensor-popup .close {
-      float: right;
-      cursor: pointer;
-      font-size: 20px;
-      color: #e74c3c;
+    .info-default {
+      color: #7f8c8d;
+      font-style: italic;
     }
   </style>
 </head>
@@ -77,39 +89,44 @@
 
   <h1>Panel Sensor Bus Interaktif</h1>
 
-  <div class="bus-container">
-    <img src="bus.png" alt="Bus Diagram">
+  <div class="dashboard">
+    <div class="bus-container">
+      <img src="ChatGPT Image Jun 9, 2025, 06_57_31 PM.png" alt="Bus Diagram">
 
-    <!-- Titik-titik sensor -->
-    <div class="sensor-dot" style="top: 20%; left: 12%;" onclick="showInfo('Pintu Penumpang Depan', 'Status: Tertutup')"></div>
-    <div class="sensor-dot" style="top: 20%; left: 85%;" onclick="showInfo('Pintu Penumpang Belakang', 'Status: Tertutup')"></div>
-    <div class="sensor-dot" style="top: 25%; left: 9%;" onclick="showInfo('Pintu Supir', 'Status: Tertutup')"></div>
+      <!-- Titik sensor -->
+      <div class="sensor-dot" style="top: 20%; left: 12%;" 
+           onclick="showInfo('Pintu Penumpang Depan', 'Status: Tertutup', this)"></div>
+      <div class="sensor-dot" style="top: 60%; left: 30%;" 
+           onclick="showInfo('Bagasi Utama', 'Status: Tertutup\nKapasitas: 75%', this)"></div>
+      <div class="sensor-dot" style="top: 40%; left: 40%;" 
+           onclick="showInfo('Kursi Penumpang', 'Jumlah: 18/28 Terisi (65%)', this)"></div>
+    </div>
 
-    <div class="sensor-dot" style="top: 60%; left: 18%;" onclick="showInfo('Bagasi Kiri Depan', 'Status: Tertutup')"></div>
-    <div class="sensor-dot" style="top: 60%; left: 30%;" onclick="showInfo('Bagasi Kiri Tengah', 'Status: Tertutup')"></div>
-    <div class="sensor-dot" style="top: 60%; left: 42%;" onclick="showInfo('Bagasi Kiri Belakang', 'Status: Tertutup')"></div>
-
-    <div class="sensor-dot" style="top: 60%; left: 58%;" onclick="showInfo('Bagasi Kanan Depan', 'Status: Tertutup')"></div>
-    <div class="sensor-dot" style="top: 60%; left: 70%;" onclick="showInfo('Bagasi Kanan Tengah', 'Status: Tertutup')"></div>
-    <div class="sensor-dot" style="top: 60%; left: 82%;" onclick="showInfo('Bagasi Kanan Belakang', 'Status: Tertutup')"></div>
-
-    <div class="sensor-dot" style="top: 40%; left: 40%;" onclick="showInfo('Kursi Penumpang', 'Jumlah: 18/28 Terisi (65%)')"></div>
-    <div class="sensor-dot" style="top: 15%; left: 10%;" onclick="showInfo('Driver Fatigue', 'Status: Normal')"></div>
-    <div class="sensor-dot" style="top: 5%; left: 50%;" onclick="showInfo('Cuaca Kota Berikutnya', 'Jakarta, 29°C, Cerah Berawan')"></div>
-  </div>
-
-  <!-- Popup -->
-  <div id="sensorPopup" class="sensor-popup">
-    <span class="close" onclick="document.getElementById('sensorPopup').style.display='none'">&times;</span>
-    <h4 id="sensorTitle">Sensor</h4>
-    <p id="sensorInfo">Detail informasi sensor.</p>
+    <!-- Panel informasi di kanan -->
+    <div class="info-panel">
+      <h3>Informasi Sensor</h3>
+      <div class="info-content">
+        <p class="info-default">Klik salah satu titik sensor untuk melihat informasi</p>
+      </div>
+    </div>
   </div>
 
   <script>
-    function showInfo(title, info) {
-      document.getElementById('sensorTitle').innerText = title;
-      document.getElementById('sensorInfo').innerText = info;
-      document.getElementById('sensorPopup').style.display = 'block';
+    function showInfo(title, info, element) {
+      // Reset semua titik sensor ke warna default
+      document.querySelectorAll('.sensor-dot').forEach(dot => {
+        dot.classList.remove('active');
+      });
+      
+      // Set titik yang diklik sebagai aktif
+      element.classList.add('active');
+      
+      // Update panel informasi
+      const infoPanel = document.querySelector('.info-content');
+      infoPanel.innerHTML = `
+        <h4>${title}</h4>
+        <p>${info.replace(/\n/g, '<br>')}</p>
+      `;
     }
   </script>
 
