--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
   <div class="dashboard">
     <div class="bus-container">
-      <img src="ChatGPT Image Jun 9, 2025, 06_57_31 PM.png" alt="Bus Diagram">
+      <img src="bus.png" alt="Bus Diagram">
 
       <!-- Titik sensor -->
       <div class="sensor-dot" style="top: 20%; left: 12%;" 
