--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             
             <!-- Bus Visualization -->
             <div class="bus-visualization">
-                <img src="ChatGPT Image Jun 9, 2025, 06_57_31 PM.png" alt="Bus Diagram" class="bus-image">
+                <img src="bus.png" alt="Bus Diagram" class="bus-image">
                 
                 <!-- Sensor Points -->
                 <div class="sensor-dot" style="top: 20%; left: 12%;" onclick="showInfo('pintu-depan')"></div>
