--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                 <div class="bus-section">
                     <h3>Visualisasi Bus</h3>
                     <div class="bus-visualization">
-                        <img src="ChatGPT Image Jun 9, 2025, 06_57_31 PM.png" alt="Bus Diagram" class="bus-image">
+                        <img src="bus.png" alt="Bus Diagram" class="bus-image">
                         
                         <!-- Sensor Points -->
                         <div class="sensor-dot" style="top: 20%; left: 12%;" onclick="showInfo('pintu-depan')"></div>
