--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             flex-direction: column;
             overflow: auto;
             min-width: 300px;
-            height: calc(3 * (180px + 15px)); /* Height of 3 widgets with gap */
-            background-image: url('bus.png');
+            height: calc(3 * (180px + 10px)); /* Height of 3 widgets with gap */
+            background-image: url('https://ridwan89.github.io/dashboard-bic/bus.png');
             background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
