--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             flex-direction: column;
             overflow: auto;
             min-width: 300px;
-            height: calc(3 * (180px + 10px)); /* Height of 3 widgets with gap */
+            min-height: 300px; /* Height of 3 widgets with gap */
             background-image: url('https://ridwan89.github.io/dashboard-bic/bus.png');
             background-size: contain;
             background-position: center;
@@ -118,7 +118,7 @@
             border-radius: 8px;
             padding: 15px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-            min-width: 100px;
+            min-width: 50px;
             min-height: 180px;
             position: relative;
             cursor: move;
