--- a/index.html
+++ b/index.html
@@ -96,11 +96,7 @@
             flex-direction: column;
             overflow: auto;
             min-width: 300px;
-            min-height: 300px; /* Height of 3 widgets with gap */
-            background-image: url('https://ridwan89.github.io/dashboard-bic/bus.png');
-            background-size: contain;
-            background-position: center;
-            background-repeat: no-repeat;
+            min-height: 300px;
             position: relative;
         }
         
@@ -240,7 +236,7 @@
         }
         
         #map {
-            height: 90%;
+            height: 98%;
             width: 100%;
             border-radius: 6px;
             background-color: rgba(255, 255, 255, 0.8);
