--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         <!-- Main Content -->
         <div class="main-content">
             <div class="header">
-                <h1>BusCabin Monitor - Jetbus 3+ SHD OH 1626</h1>
+                <h1>BusCabin Monitor - </h1> <h3>Jetbus 3+ SHD OH 1626</h3>
                 <div class="user-menu">
                     <!-- Tombol Fullscreen Baru -->
                     <button id="fullscreen-btn" class="fullscreen-button" title="Toggle Fullscreen">
