--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <!-- Main Content -->
         <div class="main-content">
             <div class="header">
-                <h1>BusCabin Monitor - <h3>Jetbus 3+ SHD OH 1626</h3></h1>
+                <h1>BusCabin Monitor - Jetbus 3+ SHD OH 1626</h1>
                 <div class="user-menu">
                     <div class="connection-status">
                         <i class="fas fa-wifi"></i>
