--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
         <!-- Main Content -->
         <div class="main-content">
             <div class="header">
-                <h1>BusCabin Monitor - Jetbus 3+ SHD OH 1626</h1>
+                <h1>BusCabin Monitor</h1>
                 <div class="user-menu">
                     <button id="dark-mode-toggle" class="dark-mode-button" title="Toggle Dark Mode">
                         <i class="fas fa-moon"></i>
