--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         }
 
         .datetime-display {
-            font-weight: bold;
+            font-weight: normal;
             color: var(--primary);
             transition: color 0.3s;
         }
